# convenient-claude

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json  settings.local.json
.obsidian/: graph.json  workspace.json
crates/cc-cli/: Cargo.toml
crates/cc-cli/src/: args.rs  main.rs  output.rs
crates/cc-cli/src/commands/: add.rs  doctor.rs  init.rs  list.rs  mod.rs  remove.rs  session.rs  show.rs  stats_cmd.rs  sync.rs  tui.rs  validate.rs
crates/cc-cli/src/tui/: app.rs  event.rs  ui.rs
crates/cc-core/: Cargo.toml
crates/cc-core/src/: agent.rs  command.rs  error.rs  hook.rs  init.rs  lib.rs  paths.rs  rule.rs  skill.rs  workspace.rs
crates/cc-core/src/config/: merge.rs  mod.rs  settings.rs
crates/cc-core/src/resource/: discovery.rs  install.rs  mod.rs  resolution.rs
crates/cc-core/src/session/: context.rs  mod.rs  modes.rs  tracker.rs
crates/cc-core/src/stats/: mod.rs  token.rs  usage.rs
crates/cc-core/src/sync/: git.rs  mod.rs
crates/cc-core/src/validate/: conflicts.rs  mod.rs  schema.rs
crates/cc-hud/: Cargo.toml
crates/cc-hud/src/: config_count.rs  git.rs  lib.rs  stdin.rs  transcript.rs  types.rs
crates/cc-hud/src/render/: agents.rs  colors.rs  mod.rs  session.rs  terminal.rs  (+2 more)
crates/cc-schema/: Cargo.toml
crates/cc-schema/src/: agent.rs  command.rs  error.rs  frontmatter.rs  hook.rs  io.rs  lib.rs  origin.rs  resource_type.rs  rule.rs  settings.rs  skill.rs  stats.rs
docs/: cc-hud-instruction.md  project-architecture.md  session-hud-plan.md  sketch-project.md
resource/: cc-workspace.toml
