[package]
name = "cc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
cc-core = { path = "../cc-core" }
cc-schema = { path = "../cc-schema" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
console = "0.15"
comfy-table = "7"
indicatif = "0.17"
inquire = "0.7"
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
