[package]
name = "cc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cc-schema = { path = "../cc-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
